--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash.truncate": "^4.4.2",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
     "nuxt": "^2.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
