--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.16.2",
     "font-awesome": "^4.7.0",
     "lodash.truncate": "^4.4.2",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
