--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
     "nuxt": "^2.4.2",
     "passport": "^0.4.0",
