--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.2",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.15",
     "lodash.truncate": "^4.4.2",
     "moment": "^2.24.0",
     "mongoose": "^5.6.8",
