--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "roboto-fontface": "*",
     "vee-validate": "^2.1.7",
     "vue-fullcalendar": "^1.0.9",
+    "vue-html-to-paper": "^1.1.1",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-quill-editor": "^3.0.6",
     "vuetify": "^1.4.4",
