--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "print-js": "^1.0.61",
     "quill": "^1.3.6",
     "roboto-fontface": "*",
     "vee-validate": "^2.1.7",
     "vue-fullcalendar": "^1.0.9",
-    "vue-html-to-paper": "^1.1.1",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-quill-editor": "^3.0.6",
     "vuetify": "^1.4.4",
