--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.16.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -27,6 +28,7 @@
     "mongoose": "^5.6.8",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^6.3.0",
     "nuxt": "^2.4.2",
     "passport": "^0.4.0",
