--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+server/config/secret.js
 
 # TypeScript v1 declaration files
 typings/
